[package]
name = "libmount"
description = """
    The type-safe wrapper around mount system call
"""
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["linux", "container", "mount", "volume", "filesystem"]
homepage = "http://github.com/tailhook/libmount"
documentation = "http://docs.rs/libmount"
version = "0.1.15"
authors = ["paul@colomiets.name"]

[dependencies]
libc = "0.2"
nix = "0.21"
quick-error = "2.0"

[dev-dependencies]
argparse = "0.2"
env_logger = "0.8"
log = "0.4"

[lib]
name = "libmount"
path = "src/lib.rs"

